--- a/public/add.goods.html
+++ b/public/add.goods.html
@@ -20,8 +20,8 @@
                 <p class="type_btn">商品分类</p>
                 <p class="add_goods_btn">商品添加</p>
                 <h3>用户管理</h3>
-                <p>用户列表</p>
-                <p>用户添加</p>
+                <p class="userslist">用户列表</p>
+                <p class="add-user">用户添加</p>
                 <h3>订单管理</h3>
         </div>
         <div id="conten">
